removed debugging borders used to fix jumping text glitch in stats column

--- a/app/assets/stylesheets/tetris.css
+++ b/app/assets/stylesheets/tetris.css
@@ -96,10 +96,8 @@
   width: 100px;
   margin-right: 35px;
   float: right;
-  border: 1px solid green;
 }
 
 .stats_board {
   height: 70px;
-  border: 1px solid pink;
 }
